break long messages up into two tweets

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 A Twitter bot that tweets direct messages sent to it.
+
+Twitter allows you to use its API 350 times per hour.
+
+The account keyed to this is cyrusbot/bu8hw1ck#
